[package]
name = "timeapi"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
serde_json = "1.0.134"
serde_derive = "1.0"
actix-web = "4.9"
chrono = "0.4"
chrono-tz = "0.10"
log = { version = "0.4", features = ["std", "serde"] }
dotenv = "0.15.0"
simplelog = "0.12.2"
ntp = "0.5.0"
tokio = { version = "1.42.0" }
futures = "0.3.31"
actix-helmet = "0.1.0"
