[package]
name = "timeapi"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
serde = "1.0.217"
serde_json = "1.0.138"
serde_derive = "1.0"
actix-web = "4.9"
chrono = "0.4"
chrono-tz = "0.10.1"
log = { version = "0.4.25", features = ["std", "serde"] }
dotenvy = "0.15.7"
simplelog = "0.12.2"
ntp = "0.5.0"
tokio = { version = "1.43.0", features = ["macros", "test-util"] }
futures = "0.3.31"
actix-cors = "0.7.0"
